Added SwaggerUI dependencies, fixed local running, changed some of README